--- a/ShoeApi/Properties/launchSettings.json
+++ b/ShoeApi/Properties/launchSettings.json
@@ -23,6 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
